// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarAndLineChart renders BarAndLineChart empty data 1`] = `
<div>
  <div
    class="legend-and-charts"
    data-cy="bar-chart"
  >
    <div
      class="core-chart table-display"
    >
      <div
        class="VictoryContainer"
        style="height: -10px; width: 100%; user-select: none; pointer-events: none; position: relative;"
      >
        <svg
          height="-10"
          role="img"
          style="pointer-events: all; width: 100%; height: 100%;"
          viewBox="0 0 100 -10"
          width="100"
        >
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: none; stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="63"
              x2="71"
              y1="-130"
              y2="-130"
            />
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-0"
                x="64.97333333333333"
                y="-104.03"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="64.97333333333333"
                >
                  -0.10
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-1"
                x="66.94666666666666"
                y="-104.03"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="66.94666666666666"
                >
                  -0.20
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-2"
                x="68.92"
                y="-104.03"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="68.92"
                >
                  -0.30
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-3"
                x="70.89333333333335"
                y="-104.03"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="70.89333333333335"
                >
                  -0.40
                </tspan>
              </text>
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: var(--core-soft); stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="63"
              x2="71"
              y1="-130"
              y2="-130"
            />
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="64.97333333333333"
                x2="64.97333333333333"
                y1="-130"
                y2="-126"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-0"
                transform="rotate(-65,64.97333333333333,-116)"
                x="64.97333333333333"
                y="-117.45"
              >
                <title>
                  -0.1
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="64.97333333333333"
                >
                  -0.1
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="66.94666666666666"
                x2="66.94666666666666"
                y1="-130"
                y2="-126"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-1"
                transform="rotate(-65,66.94666666666666,-116)"
                x="66.94666666666666"
                y="-117.45"
              >
                <title>
                  -0.2
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="66.94666666666666"
                >
                  -0.2
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="68.92"
                x2="68.92"
                y1="-130"
                y2="-126"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-2"
                transform="rotate(-65,68.92,-116)"
                x="68.92"
                y="-117.45"
              >
                <title>
                  -0.3
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="68.92"
                >
                  -0.3
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="70.89333333333335"
                x2="70.89333333333335"
                y1="-130"
                y2="-126"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-3"
                transform="rotate(-65,70.89333333333335,-116)"
                x="70.89333333333335"
                y="-117.45"
              >
                <title>
                  -0.4
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="70.89333333333335"
                >
                  -0.4
                </tspan>
              </text>
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: var(--core-soft); stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="71"
              x2="71"
              y1="16"
              y2="-130"
            />
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="71"
                x2="75"
                y1="-100.8"
                y2="-100.8"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-0"
                x="85"
                y="-97.25"
              >
                <title>
                  0.2
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="start"
                  x="85"
                >
                  0.2
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="71"
                x2="75"
                y1="-71.6"
                y2="-71.6"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-1"
                x="85"
                y="-68.05"
              >
                <title>
                  0.4
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="start"
                  x="85"
                >
                  0.4
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="71"
                x2="75"
                y1="-42.4"
                y2="-42.4"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-2"
                x="85"
                y="-38.85"
              >
                <title>
                  0.6
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="start"
                  x="85"
                >
                  0.6
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="71"
                x2="75"
                y1="-13.199999999999992"
                y2="-13.199999999999992"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-3"
                x="85"
                y="-9.649999999999991"
              >
                <title>
                  0.8
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="start"
                  x="85"
                >
                  0.8
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="71"
                x2="75"
                y1="16"
                y2="16"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-4"
                x="85"
                y="19.55"
              >
                <title>
                  1
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="start"
                  x="85"
                >
                  1
                </tspan>
              </text>
            </g>
          </g>
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        >
          <svg
            height="-10"
            style="overflow: visible; width: 100%; height: 100%;"
            viewBox="0 0 100 -10"
            width="100"
          />
        </div>
      </div>
      <div
        class="VictoryContainer"
        style="user-select: none; pointer-events: none; position: relative; width: 100px; height: 110px;"
      >
        <svg
          height="110"
          role="img"
          style="pointer-events: all; width: 100px; height: 110px;"
          width="100"
        >
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: var(--core-soft); stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="14"
              x2="80"
              y1="80"
              y2="80"
            />
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-0"
                x="27.200000000000003"
                y="105.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; fill: none; stroke: transparent; opacity: 0;"
                  text-anchor="middle"
                  x="27.200000000000003"
                >
                  0.2
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-1"
                x="40.4"
                y="105.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; fill: none; stroke: transparent; opacity: 0;"
                  text-anchor="middle"
                  x="40.4"
                >
                  0.4
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-2"
                x="53.6"
                y="105.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; fill: none; stroke: transparent; opacity: 0;"
                  text-anchor="middle"
                  x="53.6"
                >
                  0.6
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-3"
                x="66.8"
                y="105.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; fill: none; stroke: transparent; opacity: 0;"
                  text-anchor="middle"
                  x="66.8"
                >
                  0.8
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-4"
                x="80"
                y="105.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; fill: none; stroke: transparent; opacity: 0;"
                  text-anchor="middle"
                  x="80"
                >
                  1.0
                </tspan>
              </text>
            </g>
          </g>
          <rect
            cursor="move"
            height="80"
            style="fill: rgb(150, 150, 150); opacity: 0.3;"
            vector-effect="non-scaling-stroke"
            width="26.756756756756758"
            x="-12.756756756756758"
            y="0"
          />
          <rect
            cursor="ew-resize"
            height="80"
            style="stroke: transparent; fill: transparent;"
            vector-effect="non-scaling-stroke"
            width="8"
            x="-16.756756756756758"
            y="0"
          />
          <rect
            cursor="ew-resize"
            height="80"
            style="stroke: transparent; fill: transparent;"
            vector-effect="non-scaling-stroke"
            width="8"
            x="10"
            y="0"
          />
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100px; height: 110px;"
        >
          <svg
            height="110"
            style="overflow: visible; width: 100px; height: 110px;"
            width="100"
          />
        </div>
      </div>
    </div>
    <div
      class="core-chart table-display"
    >
      <div
        class="weavess-line-chart container"
        style="height: 100px; width: 100px;"
      >
        <div
          class="weavess-line-chart inner"
        >
          <div
            class="weavess-line-chart chart"
          >
            <div
              class="weavess"
              data-cy="weavess-container"
              data-end-time="0.1"
              data-start-time="0"
              style="--weavess-background-color: #182026;"
            >
              <div
                class="horizontal-divider__bottom weavess-waveform-display"
                data-cy="weavess-waveform-display"
                style="height: 100%;"
              >
                <div
                  class="weavess-zoom-handler"
                  role="tab"
                  tabindex="-1"
                >
                  <div
                    class="weavess-wp"
                    style="height: 100%; position: relative; width: 100%; box-sizing: content-box; --weavess-scrollbar-track-margin: 65px;"
                  >
                    <canvas
                      class="weavess-wp-canvas"
                      style="width: calc(100% - 75px); height: calc(100% - 35px); left: 65px;"
                    />
                    <div
                      class="weavess-wp-container"
                    >
                      <div
                        class="weavess-wp-container-1"
                      >
                        <div
                          class="weavess-wp-container-2"
                        >
                          <div
                            class="weavess-wp-container-3"
                          >
                            <aside
                              style="width: 9007199254740991px; height: 1px; position: absolute; pointer-events: none; background: none;"
                            />
                            <div
                              class="weavess-wp-container-viewport"
                              tabindex="0"
                            >
                              <div
                                class="weavess-wp-container-viewport-content"
                              >
                                <div
                                  class="weavess-wp-container-viewport-content-markers"
                                  style="width: calc(100% - 75px); left: 65px;"
                                />
                              </div>
                              <object
                                class="resize-sensor"
                                data="about:blank"
                                style="position: absolute; top: 0; left: 0; height: 100%; width: 100%; pointer-events: none; z-index: -1; opacity: 0;"
                                tabindex="-1"
                                type="text/html"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="weavess-wp-container-overlay"
                          style="width: calc(100% - 75px);"
                        >
                          <div
                            class="weavess-wp-container-overlay-cross-hair"
                          />
                          <div
                            class="weavess-wp-container-overlay-selection-area"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="weavess-wp-time-range"
                      style="left: 65px;"
                    >
                      <span>
                        1970-01-01 00:00:00.000 + 0.1 seconds
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Toastify"
                id="Weavess-Toast-Container"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BarAndLineChart renders BarAndLineChart multiple data 1`] = `
<div>
  <div
    class="legend-and-charts"
    data-cy="bar-chart"
  >
    <div
      class="core-chart table-display"
    >
      <div
        class="VictoryContainer"
        style="height: -10px; width: 100%; user-select: none; pointer-events: none; position: relative;"
      >
        <svg
          height="-10"
          role="img"
          style="pointer-events: all; width: 100%; height: 100%;"
          viewBox="0 0 100 -10"
          width="100"
        >
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: none; stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="63"
              x2="71"
              y1="-130"
              y2="-130"
            />
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-0"
                x="64.62424242424242"
                y="-104.03"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="64.62424242424242"
                >
                  -0.10
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-1"
                x="66.24848484848485"
                y="-104.03"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="66.24848484848485"
                >
                  -0.20
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-2"
                x="67.87272727272727"
                y="-104.03"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="67.87272727272727"
                >
                  -0.30
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-3"
                x="69.4969696969697"
                y="-104.03"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="69.4969696969697"
                >
                  -0.40
                </tspan>
              </text>
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: var(--core-soft); stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="63"
              x2="71"
              y1="-130"
              y2="-130"
            />
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="64.62424242424242"
                x2="64.62424242424242"
                y1="-130"
                y2="-126"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-0"
                transform="rotate(-65,64.62424242424242,-116)"
                x="64.62424242424242"
                y="-117.45"
              >
                <title>
                  -0.1
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="64.62424242424242"
                >
                  -0.1
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="66.24848484848485"
                x2="66.24848484848485"
                y1="-130"
                y2="-126"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-1"
                transform="rotate(-65,66.24848484848485,-116)"
                x="66.24848484848485"
                y="-117.45"
              >
                <title>
                  -0.2
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="66.24848484848485"
                >
                  -0.2
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="67.87272727272727"
                x2="67.87272727272727"
                y1="-130"
                y2="-126"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-2"
                transform="rotate(-65,67.87272727272727,-116)"
                x="67.87272727272727"
                y="-117.45"
              >
                <title>
                  -0.3
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="67.87272727272727"
                >
                  -0.3
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="69.4969696969697"
                x2="69.4969696969697"
                y1="-130"
                y2="-126"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-3"
                transform="rotate(-65,69.4969696969697,-116)"
                x="69.4969696969697"
                y="-117.45"
              >
                <title>
                  -0.4
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="69.4969696969697"
                >
                  -0.4
                </tspan>
              </text>
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: var(--core-soft); stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="71"
              x2="71"
              y1="16"
              y2="-130"
            />
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="71"
                x2="75"
                y1="-93.500000001825"
                y2="-93.500000001825"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-0"
                x="85"
                y="-89.950000001825"
              >
                <title>
                  0.5
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="start"
                  x="85"
                >
                  0.5
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="71"
                x2="75"
                y1="-57.000000003649994"
                y2="-57.000000003649994"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-1"
                x="85"
                y="-53.45000000365"
              >
                <title>
                  1
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="start"
                  x="85"
                >
                  1
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="71"
                x2="75"
                y1="-20.500000005475"
                y2="-20.500000005475"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-2"
                x="85"
                y="-16.950000005474998"
              >
                <title>
                  1.5
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="start"
                  x="85"
                >
                  1.5
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="71"
                x2="75"
                y1="15.9999999927"
                y2="15.9999999927"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-3"
                x="85"
                y="19.5499999927"
              >
                <title>
                  2
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="start"
                  x="85"
                >
                  2
                </tspan>
              </text>
            </g>
          </g>
          <g
            clip-path="url(#victory-clip-15)"
            style="border: 1px solid #ffffff; width: 100%; height: 100%;"
          >
            <defs>
              <clippath
                id="victory-clip-15"
              >
                <rect
                  height="146"
                  vector-effect="non-scaling-stroke"
                  width="8"
                  x="63"
                  y="-130"
                />
              </clippath>
            </defs>
          </g>
          <g
            clip-path="url(#victory-clip-16)"
            style="border: 1px solid #ffffff; width: 100%; height: 100%;"
          >
            <defs>
              <clippath
                id="victory-clip-16"
              >
                <rect
                  height="146"
                  vector-effect="non-scaling-stroke"
                  width="8"
                  x="63"
                  y="-130"
                />
              </clippath>
            </defs>
          </g>
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        >
          <svg
            height="-10"
            style="overflow: visible; width: 100%; height: 100%;"
            viewBox="0 0 100 -10"
            width="100"
          />
        </div>
      </div>
      <div
        class="VictoryContainer"
        style="user-select: none; pointer-events: none; position: relative; width: 100px; height: 110px;"
      >
        <svg
          height="110"
          role="img"
          style="pointer-events: all; width: 100px; height: 110px;"
          width="100"
        >
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: var(--core-soft); stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="14"
              x2="80"
              y1="80"
              y2="80"
            />
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-0"
                x="14.0000000066"
                y="105.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; fill: none; stroke: transparent; opacity: 0;"
                  text-anchor="middle"
                  x="14.0000000066"
                >
                  1.0
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-1"
                x="27.20000000396"
                y="105.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; fill: none; stroke: transparent; opacity: 0;"
                  text-anchor="middle"
                  x="27.20000000396"
                >
                  1.2
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-2"
                x="40.400000001319995"
                y="105.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; fill: none; stroke: transparent; opacity: 0;"
                  text-anchor="middle"
                  x="40.400000001319995"
                >
                  1.4
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-3"
                x="53.599999998680005"
                y="105.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; fill: none; stroke: transparent; opacity: 0;"
                  text-anchor="middle"
                  x="53.599999998680005"
                >
                  1.6
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-4"
                x="66.79999999604"
                y="105.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; fill: none; stroke: transparent; opacity: 0;"
                  text-anchor="middle"
                  x="66.79999999604"
                >
                  1.8
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-5"
                x="79.9999999934"
                y="105.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; fill: none; stroke: transparent; opacity: 0;"
                  text-anchor="middle"
                  x="79.9999999934"
                >
                  2.0
                </tspan>
              </text>
            </g>
          </g>
          <g
            role="presentation"
          >
            <path
              d="M 14.0000000066, 80 
A 0 0 0 0 1, 14.0000000066, 80 
L 14.0000000066, 40.000000002 
A 0 0 0 0 1, 14.0000000066, 40.000000002 
L 24.0000000066, 40.000000002 
A 0 0 0 0 1, 24.0000000066, 40.000000002 
L 24.0000000066, 80 
A 0 0 0 0 1, 24.0000000066, 80 
 z"
              index="0"
              role="presentation"
              shape-rendering="auto"
              style="fill: 000000; stroke: 000000; width: 10px; padding: 8px; stroke-width: 0;"
            />
          </g>
          <g
            role="presentation"
          >
            <path
              d="M 79.9999999934, 80 
A 0 0 0 0 1, 79.9999999934, 80 
L 79.9999999934, 4.000000330961484e-9 
A 0 0 0 0 1, 79.9999999934, 4.000000330961484e-9 
L 89.9999999934, 4.000000330961484e-9 
A 0 0 0 0 1, 89.9999999934, 4.000000330961484e-9 
L 89.9999999934, 80 
A 0 0 0 0 1, 89.9999999934, 80 
 z"
              index="0"
              role="presentation"
              shape-rendering="auto"
              style="fill: 000000; stroke: 000000; width: 10px; padding: 8px; stroke-width: 0;"
            />
          </g>
          <rect
            cursor="move"
            height="80"
            style="fill: rgb(150, 150, 150); opacity: 0.3;"
            vector-effect="non-scaling-stroke"
            width="32.50746268006567"
            x="-84.50746266026567"
            y="0"
          />
          <rect
            cursor="ew-resize"
            height="80"
            style="stroke: transparent; fill: transparent;"
            vector-effect="non-scaling-stroke"
            width="8"
            x="-88.50746266026567"
            y="0"
          />
          <rect
            cursor="ew-resize"
            height="80"
            style="stroke: transparent; fill: transparent;"
            vector-effect="non-scaling-stroke"
            width="8"
            x="-55.9999999802"
            y="0"
          />
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100px; height: 110px;"
        >
          <svg
            height="110"
            style="overflow: visible; width: 100px; height: 110px;"
            width="100"
          />
        </div>
      </div>
    </div>
    <div
      class="core-chart table-display"
    >
      <div
        class="weavess-line-chart container"
        style="height: 100px; width: 100px;"
      >
        <div
          class="weavess-line-chart inner"
        >
          <div
            class="weavess-line-chart chart"
          >
            <div
              class="weavess"
              data-cy="weavess-container"
              data-end-time="0.1"
              data-start-time="0"
              style="--weavess-background-color: #182026;"
            >
              <div
                class="horizontal-divider__bottom weavess-waveform-display"
                data-cy="weavess-waveform-display"
                style="height: 100%;"
              >
                <div
                  class="weavess-zoom-handler"
                  role="tab"
                  tabindex="-1"
                >
                  <div
                    class="weavess-wp"
                    style="height: 100%; position: relative; width: 100%; box-sizing: content-box; --weavess-scrollbar-track-margin: 65px;"
                  >
                    <canvas
                      class="weavess-wp-canvas"
                      style="width: calc(100% - 75px); height: calc(100% - 35px); left: 65px;"
                    />
                    <div
                      class="weavess-wp-container"
                    >
                      <div
                        class="weavess-wp-container-1"
                      >
                        <div
                          class="weavess-wp-container-2"
                        >
                          <div
                            class="weavess-wp-container-3"
                          >
                            <aside
                              style="width: 9007199254740991px; height: 1px; position: absolute; pointer-events: none; background: none;"
                            />
                            <div
                              class="weavess-wp-container-viewport"
                              tabindex="0"
                            >
                              <div
                                class="weavess-wp-container-viewport-content"
                              >
                                <div
                                  class="station"
                                  style="height: 51px;"
                                >
                                  <div
                                    class="channel"
                                    data-cy="id-channel"
                                    style="height: 50px; max-height: 50px;"
                                    tabindex="0"
                                  >
                                    <div
                                      class="channel-label-container"
                                      data-cy="id-label"
                                      style="height: 50px; width: 65px;"
                                      tabindex="0"
                                    >
                                      <div
                                        class="label"
                                        tabindex="0"
                                      >
                                        <div
                                          class="label-container"
                                        >
                                          <div
                                            class="label-container-left-parent"
                                          />
                                          <div
                                            class="label-container-content"
                                          >
                                            <div
                                              class="label-container-content-label"
                                              data-cy="channel-label-id"
                                            >
                                              <div
                                                class="chart__axis"
                                              >
                                                <div
                                                  class="inner rotate"
                                                />
                                              </div>
                                            </div>
                                            <div
                                              data-cy-contains-amplitude-markers="true"
                                              style="height: 100%;"
                                            >
                                              <div
                                                class="y-axis"
                                                data-cy="y-axis"
                                                data-max="1"
                                                data-min="-1"
                                                style="height: calc(100% - 4px); margin: 2px 0px 2px 0px;"
                                              >
                                                <svg
                                                  height="100%"
                                                  width="50"
                                                >
                                                  <g
                                                    class="y-axis__ordinate"
                                                    height="100%"
                                                    transform="translate(49,0)"
                                                  />
                                                </svg>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      class="channel-content-container"
                                      style="height: 50px; width: calc(100% - 65px); left: 65px;"
                                    >
                                      <div
                                        class="contentrenderer"
                                        tabindex="0"
                                      >
                                        <div
                                          class="contentrenderer-content contentrenderer-content--sticky"
                                          style="width: calc(100% - 65);"
                                        />
                                        <div
                                          class="contentrenderer-content"
                                          data-cy-station-waveform="id"
                                          style="left: 65px; width: calc(100% - 65px);"
                                        >
                                          <div
                                            class="contentrenderer-content-drag-indicator"
                                          />
                                          <div
                                            class="measure-window-selection measure-window-selection__container"
                                            style="display: none; transform: translateX(-50%);"
                                          >
                                            <div
                                              class="measure-window-selection__overlay"
                                              data-cy="measure-window-selection"
                                              draggable="true"
                                              style="display: none; left: 50%; width: 0%;"
                                            />
                                          </div>
                                          <div
                                            class="contentrenderer-content-markers"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="weavess-wp-container-viewport-content-markers"
                                  style="width: calc(100% - 75px); left: 65px;"
                                />
                              </div>
                              <object
                                class="resize-sensor"
                                data="about:blank"
                                style="position: absolute; top: 0; left: 0; height: 100%; width: 100%; pointer-events: none; z-index: -1; opacity: 0;"
                                tabindex="-1"
                                type="text/html"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="weavess-wp-container-overlay"
                          style="width: calc(100% - 75px);"
                        >
                          <div
                            class="weavess-wp-container-overlay-cross-hair"
                          />
                          <div
                            class="weavess-wp-container-overlay-selection-area"
                          />
                        </div>
                      </div>
                      <div
                        class="x-axis"
                        data-cy="x-axis"
                        data-end-time="0.1"
                        data-start-time="0"
                        style="height: 35px;"
                      >
                        <div
                          style="width: 100%;"
                        >
                          <svg
                            height="35"
                            style="fill: #F6F7F9;"
                            width="100%"
                          >
                            <g
                              class="x-axis-axis"
                              fill="none"
                              font-family="sans-serif"
                              font-size="10"
                              text-anchor="middle"
                            >
                              <path
                                class="domain"
                                d="M65.5,7V0.5H-9.5V7"
                                stroke="currentColor"
                              />
                            </g>
                          </svg>
                        </div>
                        <div
                          style="text-align: center;"
                        />
                      </div>
                    </div>
                    <div
                      class="weavess-wp-time-range"
                      style="left: 65px;"
                    >
                      <span>
                        1970-01-01 00:00:00.000 + 0.1 seconds
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Toastify"
                id="Weavess-Toast-Container"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BarAndLineChart renders BarAndLineChart undefined data 01 1`] = `
<div>
  <div
    class="legend-and-charts"
    data-cy="bar-chart"
  >
    <div
      class="core-chart table-display"
    >
      <div
        class="VictoryContainer"
        style="width: 100%; user-select: none; pointer-events: none; position: relative;"
      >
        <svg
          height="NaN"
          role="img"
          style="pointer-events: all; width: 100%; height: 100%;"
          viewBox="0 0 450 NaN"
          width="450"
        >
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: none; stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="63"
              x2="421"
              y1="NaN"
              y2="NaN"
            />
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-0"
                x="134.60000000000002"
                y="NaN"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="134.60000000000002"
                >
                  0.2
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-1"
                x="206.2"
                y="NaN"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="206.2"
                >
                  0.4
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-2"
                x="277.8"
                y="NaN"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="277.8"
                >
                  0.6
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-3"
                x="349.40000000000003"
                y="NaN"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="349.40000000000003"
                >
                  0.8
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-4"
                x="421"
                y="NaN"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="421"
                >
                  1.0
                </tspan>
              </text>
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: var(--core-soft); stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="63"
              x2="421"
              y1="NaN"
              y2="NaN"
            />
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="134.60000000000002"
                x2="134.60000000000002"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-0"
                transform="rotate(-65,134.60000000000002,NaN)"
                x="134.60000000000002"
                y="NaN"
              >
                <title>
                  0.2
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="134.60000000000002"
                >
                  0.2
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="206.2"
                x2="206.2"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-1"
                transform="rotate(-65,206.2,NaN)"
                x="206.2"
                y="NaN"
              >
                <title>
                  0.4
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="206.2"
                >
                  0.4
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="277.8"
                x2="277.8"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-2"
                transform="rotate(-65,277.8,NaN)"
                x="277.8"
                y="NaN"
              >
                <title>
                  0.6
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="277.8"
                >
                  0.6
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="349.40000000000003"
                x2="349.40000000000003"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-3"
                transform="rotate(-65,349.40000000000003,NaN)"
                x="349.40000000000003"
                y="NaN"
              >
                <title>
                  0.8
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="349.40000000000003"
                >
                  0.8
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="421"
                x2="421"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-4"
                transform="rotate(-65,421,NaN)"
                x="421"
                y="NaN"
              >
                <title>
                  1
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="421"
                >
                  1
                </tspan>
              </text>
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: var(--core-soft); stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="63"
              x2="63"
              y1="16"
              y2="NaN"
            />
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="63"
                x2="59"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-0"
                x="49"
                y="NaN"
              >
                <title>
                  0.2
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="end"
                  x="49"
                >
                  0.2
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="63"
                x2="59"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-1"
                x="49"
                y="NaN"
              >
                <title>
                  0.4
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="end"
                  x="49"
                >
                  0.4
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="63"
                x2="59"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-2"
                x="49"
                y="NaN"
              >
                <title>
                  0.6
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="end"
                  x="49"
                >
                  0.6
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="63"
                x2="59"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-3"
                x="49"
                y="NaN"
              >
                <title>
                  0.8
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="end"
                  x="49"
                >
                  0.8
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="63"
                x2="59"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-4"
                x="49"
                y="NaN"
              >
                <title>
                  1
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="end"
                  x="49"
                >
                  1
                </tspan>
              </text>
            </g>
          </g>
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        >
          <svg
            height="NaN"
            style="overflow: visible; width: 100%; height: 100%;"
            viewBox="0 0 450 NaN"
            width="450"
          />
        </div>
      </div>
    </div>
    <div
      class="core-chart table-display"
    >
      <div
        class="weavess-line-chart container"
      >
        <div
          class="weavess-line-chart inner"
        >
          <div
            class="weavess-line-chart chart"
          >
            <div
              class="weavess"
              data-cy="weavess-container"
              data-end-time="NaN"
              data-start-time="NaN"
              style="--weavess-background-color: #182026;"
            >
              <div
                class="horizontal-divider__bottom weavess-waveform-display"
                data-cy="weavess-waveform-display"
                style="height: 100%;"
              >
                <div
                  class="weavess-zoom-handler"
                  role="tab"
                  tabindex="-1"
                >
                  <div
                    class="weavess-wp"
                    style="height: 100%; position: relative; width: 100%; box-sizing: content-box; --weavess-scrollbar-track-margin: 65px;"
                  >
                    <canvas
                      class="weavess-wp-canvas"
                      style="width: calc(100% - 75px); height: calc(100% - 35px); left: 65px;"
                    />
                    <div
                      class="weavess-wp-container"
                    >
                      <div
                        class="weavess-wp-container-1"
                      >
                        <div
                          class="weavess-wp-container-2"
                        >
                          <div
                            class="weavess-wp-container-3"
                          >
                            <aside
                              style="width: 9007199254740991px; height: 1px; position: absolute; pointer-events: none; background: none;"
                            />
                            <div
                              class="weavess-wp-container-viewport"
                              tabindex="0"
                            >
                              <div
                                class="weavess-wp-container-viewport-content"
                              >
                                <div
                                  class="weavess-wp-container-viewport-content-markers"
                                  style="width: calc(100% - 75px); left: 65px;"
                                />
                              </div>
                              <object
                                class="resize-sensor"
                                data="about:blank"
                                style="position: absolute; top: 0; left: 0; height: 100%; width: 100%; pointer-events: none; z-index: -1; opacity: 0;"
                                tabindex="-1"
                                type="text/html"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="weavess-wp-container-overlay"
                          style="width: calc(100% - 75px);"
                        >
                          <div
                            class="weavess-wp-container-overlay-cross-hair"
                          />
                          <div
                            class="weavess-wp-container-overlay-selection-area"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="weavess-wp-time-range"
                      style="left: 65px;"
                    >
                      <span>
                        Invalid date + NaN seconds
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Toastify"
                id="Weavess-Toast-Container"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BarAndLineChart renders BarAndLineChart undefined data 02 1`] = `
<div>
  <div
    class="legend-and-charts"
    data-cy="bar-chart"
  >
    <div
      class="core-chart table-display"
    >
      <div
        class="VictoryContainer"
        style="width: 100%; user-select: none; pointer-events: none; position: relative;"
      >
        <svg
          height="NaN"
          role="img"
          style="pointer-events: all; width: 100%; height: 100%;"
          viewBox="0 0 450 NaN"
          width="450"
        >
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: none; stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="63"
              x2="421"
              y1="NaN"
              y2="NaN"
            />
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-0"
                x="134.60000000000002"
                y="NaN"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="134.60000000000002"
                >
                  0.2
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-1"
                x="206.2"
                y="NaN"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="206.2"
                >
                  0.4
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-2"
                x="277.8"
                y="NaN"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="277.8"
                >
                  0.6
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-3"
                x="349.40000000000003"
                y="NaN"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="349.40000000000003"
                >
                  0.8
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-4"
                x="421"
                y="NaN"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="fill: none; font-family: var(--core-sans); font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent;"
                  text-anchor="middle"
                  x="421"
                >
                  1.0
                </tspan>
              </text>
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: var(--core-soft); stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="63"
              x2="421"
              y1="NaN"
              y2="NaN"
            />
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="134.60000000000002"
                x2="134.60000000000002"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-0"
                transform="rotate(-65,134.60000000000002,NaN)"
                x="134.60000000000002"
                y="NaN"
              >
                <title>
                  0.2
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="134.60000000000002"
                >
                  0.2
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="206.2"
                x2="206.2"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-1"
                transform="rotate(-65,206.2,NaN)"
                x="206.2"
                y="NaN"
              >
                <title>
                  0.4
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="206.2"
                >
                  0.4
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="277.8"
                x2="277.8"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-2"
                transform="rotate(-65,277.8,NaN)"
                x="277.8"
                y="NaN"
              >
                <title>
                  0.6
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="277.8"
                >
                  0.6
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="349.40000000000003"
                x2="349.40000000000003"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-3"
                transform="rotate(-65,349.40000000000003,NaN)"
                x="349.40000000000003"
                y="NaN"
              >
                <title>
                  0.8
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="349.40000000000003"
                >
                  0.8
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="421"
                x2="421"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="-25"
                id="chart-undefined-1-tickLabels-4"
                transform="rotate(-65,421,NaN)"
                x="421"
                y="NaN"
              >
                <title>
                  1
                </title>
                <tspan
                  dx="-25"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="middle"
                  x="421"
                >
                  1
                </tspan>
              </text>
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: var(--core-soft); stroke-width: 1;"
              vector-effect="non-scaling-stroke"
              x1="63"
              x2="63"
              y1="16"
              y2="NaN"
            />
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="63"
                x2="59"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-0"
                x="49"
                y="NaN"
              >
                <title>
                  0.2
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="end"
                  x="49"
                >
                  0.2
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="63"
                x2="59"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-1"
                x="49"
                y="NaN"
              >
                <title>
                  0.4
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="end"
                  x="49"
                >
                  0.4
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="63"
                x2="59"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-2"
                x="49"
                y="NaN"
              >
                <title>
                  0.6
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="end"
                  x="49"
                >
                  0.6
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="63"
                x2="59"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-3"
                x="49"
                y="NaN"
              >
                <title>
                  0.8
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="end"
                  x="49"
                >
                  0.8
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: var(--core-main); stroke-width: 1; size: 4px;"
                vector-effect="non-scaling-stroke"
                x1="63"
                x2="59"
                y1="NaN"
                y2="NaN"
              />
              <text
                direction="inherit"
                dx="6"
                id="chart-undefined-1-tickLabels-4"
                x="49"
                y="NaN"
              >
                <title>
                  1
                </title>
                <tspan
                  dx="6"
                  dy="0"
                  style="font-size: 10px; font-family: var(--core-sans); letter-spacing: normal; padding: 10px; fill: var(--core-main); stroke: transparent;"
                  text-anchor="end"
                  x="49"
                >
                  1
                </tspan>
              </text>
            </g>
          </g>
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        >
          <svg
            height="NaN"
            style="overflow: visible; width: 100%; height: 100%;"
            viewBox="0 0 450 NaN"
            width="450"
          />
        </div>
      </div>
    </div>
    <div
      class="core-chart table-display"
    >
      <div
        class="weavess-line-chart container"
      >
        <div
          class="weavess-line-chart inner"
        >
          <div
            class="weavess-line-chart chart"
          >
            <div
              class="weavess"
              data-cy="weavess-container"
              data-end-time="NaN"
              data-start-time="NaN"
              style="--weavess-background-color: #182026;"
            >
              <div
                class="horizontal-divider__bottom weavess-waveform-display"
                data-cy="weavess-waveform-display"
                style="height: 100%;"
              >
                <div
                  class="weavess-zoom-handler"
                  role="tab"
                  tabindex="-1"
                >
                  <div
                    class="weavess-wp"
                    style="height: 100%; position: relative; width: 100%; box-sizing: content-box; --weavess-scrollbar-track-margin: 65px;"
                  >
                    <canvas
                      class="weavess-wp-canvas"
                      style="width: calc(100% - 75px); height: calc(100% - 35px); left: 65px;"
                    />
                    <div
                      class="weavess-wp-container"
                    >
                      <div
                        class="weavess-wp-container-1"
                      >
                        <div
                          class="weavess-wp-container-2"
                        >
                          <div
                            class="weavess-wp-container-3"
                          >
                            <aside
                              style="width: 9007199254740991px; height: 1px; position: absolute; pointer-events: none; background: none;"
                            />
                            <div
                              class="weavess-wp-container-viewport"
                              tabindex="0"
                            >
                              <div
                                class="weavess-wp-container-viewport-content"
                              >
                                <div
                                  class="weavess-wp-container-viewport-content-markers"
                                  style="width: calc(100% - 75px); left: 65px;"
                                />
                              </div>
                              <object
                                class="resize-sensor"
                                data="about:blank"
                                style="position: absolute; top: 0; left: 0; height: 100%; width: 100%; pointer-events: none; z-index: -1; opacity: 0;"
                                tabindex="-1"
                                type="text/html"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="weavess-wp-container-overlay"
                          style="width: calc(100% - 75px);"
                        >
                          <div
                            class="weavess-wp-container-overlay-cross-hair"
                          />
                          <div
                            class="weavess-wp-container-overlay-selection-area"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="weavess-wp-time-range"
                      style="left: 65px;"
                    >
                      <span>
                        Invalid date + NaN seconds
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Toastify"
                id="Weavess-Toast-Container"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
